[gd_scene load_steps=4 format=2]

[ext_resource path="res://resource/UI/UIBars/ProgressWheel/ProgressWheel.gd" type="Script" id=1]
[ext_resource path="res://resource/UI/UIBars/ProgressWheel/Assets/circle_fg.png" type="Texture" id=2]
[ext_resource path="res://resource/UI/UIBars/ProgressWheel/Assets/circle_bg.png" type="Texture" id=3]

[node name="ProgressWheel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )

[node name="BGProgress" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
fill_mode = 5
tint_under = Color( 0.227451, 0.168627, 0.168627, 1 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FGProgress" type="TextureProgress" parent="."]
margin_right = 756.0
margin_bottom = 756.0
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 5
tint_progress = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PulseTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="FlashTween" type="Tween" parent="."]

[node name="UpdateTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
